@@ -1,5 +1,17 @@
 2007-05-19  Benoît Dejean  <benoit@placenet.org>
 
+	* src/defaulttable.h:
+	* src/prettytable.cpp:
+	* src/prettytable.h:
+	
+	Dropped dead code.
+	Every app now has a default icon.
+	Reworked the defaultable:
+		- uses regexes.
+		- uses generic icon name whenever possible.
+
+2007-05-19  Benoît Dejean  <benoit@placenet.org>
+
 	* configure.in:
 	* src/proctable.cpp:
 
